[package]
name = "skewer"
version = "0.1.0"
edition = "2021"
description = "A command line linter for survey questions. Flags leading phrasing, loaded wording, double-barreled questions and other common problems."
license = "MIT"
repository = "https://github.com/Joe-Speed/skewer"
keywords = ["survey", "linter", "bias", "behavioral-science", "research"]
categories = ["command-line-utilities", "science"]

[dependencies]
csv = "1"
serde_json = "1"
